# petrivelte

./: .gitignore  BACKEND_COMS.md  FRONTEND_COMS.md  README.md  pyproject.toml
examples/: README.md  __init__.py
examples/coloured_balls/: __init__.py  app.py  graph.py  models.py  token_style.py
examples/toy/: __init__.py
examples/toy/match_up_tokens/: README.md  __init__.py  app.py  graph.py  models.py  token_style.py
frontend/: .env.example  AGENTS.md  Dockerfile  LOG_STREAMING_PLAN.md  PLAN_FOR_FRONTEND.md  README.md  SECURITY_TODO.md  fly.toml  package-lock.json  package.json  svelte.config.js
frontend/src/lib/: api.contract.ts  api.ts  idempotency.ts  netHelpers.ts  theme.css  theme.ts  types.ts
frontend/src/lib/actions/: portal.ts
frontend/src/lib/components/: AnimatingToken.svelte  AppNav.svelte  DataLoadState.svelte  Edge.svelte  ExecutionLog.svelte  GraphPanel.svelte  LogViewer.svelte  NotebookErrorsBanner.svelte  Place.svelte  PlaceCircle.svelte  PlaceText.svelte  SetupChecklist.svelte  (+6 more)
frontend/src/routes/: +layout.svelte  +page.svelte
implementation_docs/: ARCHITECTURE_DECISION_WEBSOCKET.md  CLAUDE.md  CONTROLS_IMPLEMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INITIAL_TRANSFER_PROMPT.md  OPTION_A_COMPLETE.md  RESET_BUTTON_IMPLEMENTATION.md  SETUP_SUMMARY.md  START_HERE.md  SVELTE_DESIGN.md  TOKEN_VISUALIZATION_ALGORITHM.md
reference/: README.md  animation.py  data_structures.py  layout.py  previous_version_render.py
tests/: README.md  conftest.py  test_animation.py  test_layout.py  test_render.py
(+35 files in other folders)
