[project]
name = "petrivelt"
version = "0.1.0"
description = "Svelte-based frontend for visualizing Petri nets from petritype-server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",  # For testing API connections if needed
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

# Note: This project is primarily a Svelte/JavaScript frontend.
# Python dependencies here are optional - mainly for running reference tests
# or connecting to petritype-server during development.
#
# The main frontend dependencies are in frontend/package.json (to be created).
